# TeaEngine

./: .gitignore  CMakeLists.txt  README.md  library.cpp  library.h
Dependencies/include/glad/: glad.c  glad.h
